// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoomBasedMarkers SymbolsForDifferentZoomLevels smoke-test 1`] = `
<div class="CLASS_NAME_FILLER">
  <div class="CLASS_NAME_FILLER"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="CLASS_NAME_FILLER">
      <canvas class="CLASS_NAME_FILLER"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="608"
              height="432"
              style="width: 608px; height: 432px;"
      >
      </canvas>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(350px, 223px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(304px, 216px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(306px, 214px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
    </div>
    <div class="CLASS_NAME_FILLER">
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
        <details class="CLASS_NAME_FILLER"
                 open
        >
          <summary class="CLASS_NAME_FILLER"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="CLASS_NAME_FILLER">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`ZoomBasedMarkers TransformedSymbols smoke-test 1`] = `
<div class="CLASS_NAME_FILLER">
  <div class="CLASS_NAME_FILLER"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="CLASS_NAME_FILLER">
      <canvas class="CLASS_NAME_FILLER"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="608"
              height="432"
              style="width: 608px; height: 432px;"
      >
      </canvas>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(350px, 223px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(304px, 216px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(306px, 214px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
    </div>
    <div class="CLASS_NAME_FILLER">
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
        <details class="CLASS_NAME_FILLER"
                 open
        >
          <summary class="CLASS_NAME_FILLER"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="CLASS_NAME_FILLER">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;
